Bug 523055 - 'Show Cookies' sheet doesn't appear if a cookie value contains non-UTF-8 data, so add a Latin-1 fallback, a placeholder fallback in case that fails, and some safety netting as a last resort. Patch by Stuart Morgan <stuart.morgan+bugzilla@gmail.com>, r/sr=pink